[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.1.1", features = ["iterator"] }
serde = { version = "1.0.144", features = ["derive"] }
cw-storage-plus = { version = "1.0.0", features = ['iterator'] }
serde_json = "1.0.85"
rspotify = "0.11.5"
cw2 = { version = "0.16.0" }

[dev-dependencies]
cw-multi-test = "0.13.4"